syntax = "proto3";
package dvs.types;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "dvs/types";

message TaskResult {
  uint32 task_index = 1;
  TaskRequest task_request = 2;
  bool put_on_chain = 3;
}

message TaskRequest {
  uint32 task_index = 1;
  uint32 height = 2;
  uint64 chain_id = 3;
  string squared = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  bytes group_numbers = 5;
  uint32 group_threshold_percentage = 6;
}
